Bug #1268788 by KrisBulman, sheena_d, ezra-g: Fixes for alignment and overflow around node links

--- a/themes/commons_origins/css/commons_origins-style.css
+++ b/themes/commons_origins/css/commons_origins-style.css
@@ -88,7 +88,7 @@ ul.krumo-node ul{
 .node .inner ul li,
 .panel-pane .inner ul li,
 .block .content ul li {
-  background: transparent url(../images/gray-arrow-right.png) no-repeat 0 4px;
+  background: transparent url(../images/gray-arrow-right.png) no-repeat 3px center;
   list-style-image: none;
   list-style: none;
   margin-bottom: 8px;
@@ -96,8 +96,13 @@ ul.krumo-node ul{
   text-indent: 0;
 }
 
+.node .inner .links ul {
+	padding-left: 0px;
+}
+
 .node .inner .links li > a {
 	color: #669acc;
+	white-space: nowrap;
 }
 
 .node .inner .links .comment_add {
@@ -893,13 +898,14 @@ ul.links li {
 
 .node .inner ul.menu li a,
 .block .content ul.menu li a,
-.panel-pane .inner ul.menu li aa {
-	background: transparent url(../images/gray-arrow-right.png) no-repeat 0 1px;
+.panel-pane .inner ul.menu li a {
+	background: transparent url(../images/gray-arrow-right.png) no-repeat left center;
 	list-style-image: none;
 	list-style: none;
 	margin: 0 0 8px 0;
 	padding: 0 0 0 22px;
 	text-indent: 0;
+
 }
 
 /* Only more/read more links */
